0  <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0EA575"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonSl"
        android:layout_width="96dp"
        android:layout_height="91dp"
        android:text="@string/sl"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonVh"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonVh"
        android:layout_width="98dp"
        android:layout_height="94dp"
        android:text="@string/vh"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSl"
        app:layout_constraintEnd_toStartOf="@+id/buttonUm"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonUm"
        android:layout_width="98dp"
        android:layout_height="94dp"
        android:text="@string/um"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonVh"
        app:layout_constraintEnd_toStartOf="@+id/buttonDl"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonDl"
        android:layout_width="98dp"
        android:layout_height="94dp"
        android:text="@string/dl"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonUm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#4C43CA"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/Text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_1"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#4527A0"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/Text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_2"
        android:inputType="text"
        android:minHeight="40dp"
        android:textColorHint="#4527A0"
        app:layout_constraintTop_toBottomOf="@+id/Text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/Text3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hint_3"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#4527A0"
        app:layout_constraintTop_toBottomOf="@+id/Text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
